--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ readme = "README.md"
 repository = "https://github.com/cdumay/cdumay_error_standard"
 
 [dependencies]
-cdumay_error = {version = "1.0", features = ["derive"]}
+cdumay_core = "0.1"
 serde-value = "0.7"
